--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="https://q.qlogo.cn/g?b=qq&nk=3522934828&s=100" class="layui-nav-img">
     </a>
     <dl class="layui-nav-child">
-      <dd><a href="https://lwcat.cn">关于</a></dd>
+      <dd><a href="https://gitee.com/ximami/enphp/blob/master/index.html">关于</a></dd>
       <dd><a href="https://lwcat.cn">博客</a></dd>
     </dl>
   </li>
@@ -129,7 +129,7 @@
   <p>
     Copyright &copy; 2024 <a href="/">云猫</a></p>
   <p id="LAY-footer-info">
-    <a href="/" rel="nofollow" target="_blank">开源源码</a>
+    <a href="https://gitee.com/ximami/enphp/blob/master/index.html" rel="nofollow" target="_blank">开源源码</a>
     <a href="https://lwcat.cn/" target="_blank">博客</a>
   </p></center>
 
