--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <ul class="layui-nav layui-bg-cyan">
   <li class="layui-nav-item" lay-unselect>
     <a href="javascript:;">
-      <img src="https://q.qlogo.cn/g?b=qq&nk=3522934828&s=100" class="layui-nav-img">
+      <img src="https://q.qlogo.cn/g?b=qq&nk=123456&s=100" class="layui-nav-img">
     </a>
     <dl class="layui-nav-child">
-      <dd><a href="https://gitee.com/ximami/enphp/blob/master/index.html">关于</a></dd>
-      <dd><a href="https://lwcat.cn">博客</a></dd>
+      <dd><a href="https://gitee.com/ximami/enphp">关于</a></dd>
+      <dd><a href="/">博客</a></dd>
     </dl>
   </li>
 </ul>
@@ -129,8 +129,8 @@
   <p>
     Copyright &copy; 2024 <a href="/">云猫</a></p>
   <p id="LAY-footer-info">
-    <a href="https://gitee.com/ximami/enphp/blob/master/index.html" rel="nofollow" target="_blank">开源源码</a>
-    <a href="https://lwcat.cn/" target="_blank">博客</a>
+    <a href="https://gitee.com/ximami/enphp/" rel="nofollow" target="_blank">开源源码</a>
+    <a href="/" target="_blank">博客</a>
   </p></center>
 
           
