--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <strong>注意：</strong>
               <em>请先将要加密的php文件用zip格式压缩起来，再进行上传加密，支持批量批量加密</em>
             </span>
-            <p>当前加密版本：V1.0</p>
+            <p>当前加密算法：V1.1</p>
           </div>
          <div class="layui-collapse" lay-accordion>
   <div class="layui-colla-item">
